--- a/index.html
+++ b/index.html
@@ -248,19 +248,19 @@
           frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe> </div>
       <div class="col-lg-6 contact">
         <h3>Contact us</h3>
-        <form action="mailto:josueajfix@gmail.com" class="appointment-form">
+        <form action="mailto:josueajfix@gmail.com" method="get" enctype="text/plain" class="appointment-form">
           <div class="d-md-flex">
             <div class="form-group">
-              <input type="text" class="form-control" placeholder="First Name">
+              <input type="text" name="Your Name: " id="name" class="form-control" placeholder="First Name">
             </div>
           </div>
           <div class="d-md-flex">
             <div class="form-group">
-              <input type="text" class="form-control" placeholder="Last Name">
+              <input type="text" name="Your Last Name: " id="name" class="form-control" placeholder="Last Name">
             </div>
           </div>
           <div class="form-group">
-            <textarea style="resize:none;" name="" id="" cols="20" rows="3" class="form-control" placeholder="Message"></textarea>
+            <textarea style="resize:none;" name="Your Message" id="message" cols="20" rows="3" class="form-control" placeholder="Message"></textarea>
           </div>
           <div class="form-group">
             <input type="submit" value="Send" class="btn btn-light btn-block">
