--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
             <textarea style="resize:none;" name="Your Message" id="message" cols="20" rows="3" class="form-control" placeholder="Message"></textarea>
           </div>
           <div class="form-group">
-            <input type="submit" value="Send" class="btn btn-light btn-block">
+            <input type="submit" value="Send" name="submit" class="btn btn-light btn-block">
           </div>
         </form>
 
