--- a/index.html
+++ b/index.html
@@ -251,19 +251,19 @@
         <form action="mailto:josueajfix@gmail.com" method="get" enctype="text/plain" class="appointment-form">
           <div class="d-md-flex">
             <div class="form-group">
-              <input type="text" name="Your Name: " id="name" class="form-control" placeholder="First Name">
+              <input type="text" name="Your Name:" id="name" class="form-control" placeholder="First Name">
             </div>
           </div>
           <div class="d-md-flex">
             <div class="form-group">
-              <input type="text" name="Your Last Name: " id="name" class="form-control" placeholder="Last Name">
+              <input type="text" name="Your Last Name:" id="name" class="form-control" placeholder="Last Name">
             </div>
           </div>
           <div class="form-group">
-            <textarea style="resize:none;" name="Your Message" id="message" cols="20" rows="3" class="form-control" placeholder="Message"></textarea>
+            <textarea style="resize:none;" name="Your Message:" id="message" cols="20" rows="3" class="form-control" placeholder="Message"></textarea>
           </div>
           <div class="form-group">
-            <input type="submit" value="Send" name="submit" class="btn btn-light btn-block">
+            <input type="submit" name="submit" value="Sumbit" class="btn btn-light btn-block">
           </div>
         </form>
 
