--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
           frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe> </div>
       <div class="col-lg-6 contact">
         <h3>Contact us</h3>
-        <form action="mailto:josueajfix@gmail.com" method="get" enctype="text/plain" class="appointment-form">
+        <form action="mailto:josueajfix@gmail.com" method="post" enctype="text/plain" class="appointment-form">
           <div class="d-md-flex">
             <div class="form-group">
               <input type="text" name="Your Name:" id="name" class="form-control" placeholder="First Name">
@@ -263,7 +263,7 @@
             <textarea style="resize:none;" name="Your Message:" id="message" cols="20" rows="3" class="form-control" placeholder="Message"></textarea>
           </div>
           <div class="form-group">
-            <input type="submit" name="submit" value="Sumbit" class="btn btn-light btn-block">
+            <input type="submit" name="submit" value="Send" class="btn btn-light btn-block">
           </div>
         </form>
 
