--- a/index.html
+++ b/index.html
@@ -249,12 +249,12 @@
       <div class="col-lg-6 contact">
         <h3>Contact us</h3>
         <form action="mailto:josueajfix@gmail.com" method="post" enctype="text/plain" class="appointment-form">
-          <div class="d-md-flex">
+          <div class="d-sm-flex">
             <div class="form-group">
               <input type="text" name="Your Name:" id="name" class="form-control" placeholder="First Name">
             </div>
           </div>
-          <div class="d-md-flex">
+          <div class="d-sm-flex">
             <div class="form-group">
               <input type="text" name="Your Last Name:" id="name" class="form-control" placeholder="Last Name">
             </div>
